# Rokey6-C1-Isaac-simulation-project

./: README.md
Project/: Cleanroom.usd  cleanromm.usd  cleanroom.usda  cleanroom_final.usda  cleanroom_map.yaml  door.py  goThrough.py  main.py  nav_to_pose.py  qr_watcher.py  ros_to_web_thread.py  turtlebot3_burger_ex.usd  ur10_final_run  yolo_detector.py
Project/my_pkg/: package.xml  setup.py
Project/my_pkg/launch/: robot_system.launch.py
Project/my_pkg/my_pkg/: goThrough.py  qr_watcher.py  yolo_detector.py
Project/my_pkg/resource/vial_usd(1)/vial_usd/: medicine_A.usdc  medicine_B.usdc  medicine_C.usdc
exercise/JY/: __init__.py  day02.py  domino.py  gripper_ur10.py  m0609.usd  m0609_.usd  pinball.py
